Opened 12 years ago
Closed 12 years ago
#3784 closed defect (fixed)
ffprobe of plain WAV file fails with "Not a valid DCA frame"
| Reported by: | Leigh Dyer | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | wav probe regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
I have what should be a fairly plain WAV file -- it's 44.1khz, 16-bit, produced by the "flac" command-line tool, but when I run ffprobe on it, it fails:
leigh@petunia03:~$ /opt/bandcamp/bin/ffprobe -show_streams -show_format testwav1-chopped.wav
ffprobe version 2.2.4 Copyright (c) 2007-2014 the FFmpeg developers
built on Jul 16 2014 01:05:58 with gcc 4.4.3 (Ubuntu 4.4.3-4ubuntu5.1)
configuration: --prefix=/opt/bandcamp --disable-ffplay --disable-ffserver --enable-memalign-hack --disable-bsfs --disable-protocols --disable-indevs --disable-outdevs --disable-devices --enable-protocol=file
libavutil 52. 66.100 / 52. 66.100
libavcodec 55. 52.102 / 55. 52.102
libavformat 55. 33.100 / 55. 33.100
libavdevice 55. 10.100 / 55. 10.100
libavfilter 4. 2.100 / 4. 2.100
libswscale 2. 5.102 / 2. 5.102
libswresample 0. 18.100 / 0. 18.100
[dca @ 0x1b94cc0] Not a valid DCA frame
[dca @ 0x1b94cc0] Invalid LFE value: 0
Last message repeated 1 times
[dca @ 0x1b94cc0] error decoding block
[dca @ 0x1b94cc0] Invalid LFE value: 0
[wav @ 0x1b941c0] decoding for stream 0 failed
[wav @ 0x1b941c0] Could not find codec parameters for stream 0 (Audio: dts ([1][0][0][0] / 0x0001), 192000 Hz, 2 channels, fltp, 0 kb/s): no decodable DTS frames
Consider increasing the value for the 'analyzeduration' and 'probesize' options
testwav1-chopped.wav: End of file
This seems very similar to ticket #2810 but I assume that a release as recent as 2.2.4 would include that fix. Could it be a regression?
I can't upload the full affected WAV, but I'll upload a 10 second snippet from the start that produces the same error.
Thanks
Leigh
Attachments (1)
Change History (3)
by , 12 years ago
| Attachment: | testwav1-chopped.wav added |
|---|
comment:1 by , 12 years ago
| Keywords: | wav probe regression added |
|---|---|
| Priority: | normal → important |
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
comment:2 by , 12 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.



For future tickets: Please always test current FFmpeg git head before reporting problems and please do not report issues against ffprobe (or ffplay) if they are reproducible with ffmpeg (the application).
$ ffmpeg -i testwav1-chopped.wav ffmpeg version N-64785-gffa0b51 Copyright (c) 2000-2014 the FFmpeg developers built on Jul 18 2014 23:16:09 with gcc 4.7 (SUSE Linux) configuration: --enable-gpl libavutil 52. 92.101 / 52. 92.101 libavcodec 55. 69.100 / 55. 69.100 libavformat 55. 48.101 / 55. 48.101 libavdevice 55. 13.102 / 55. 13.102 libavfilter 4. 11.102 / 4. 11.102 libswscale 2. 6.100 / 2. 6.100 libswresample 0. 19.100 / 0. 19.100 libpostproc 52. 3.100 / 52. 3.100 [dca @ 0x1c5d520] Not a valid DCA frame [dca @ 0x1c5d520] Invalid LFE value: 0 Last message repeated 1 times [dca @ 0x1c5d520] error decoding block [dca @ 0x1c5d520] Invalid LFE value: 0 [wav @ 0x1c5cb20] decoding for stream 0 failed [wav @ 0x1c5cb20] Could not find codec parameters for stream 0 (Audio: dts ([1][0][0][0] / 0x0001), 192000 Hz, 2 channels, fltp, 0 kb/s): no decodable DTS frames Consider increasing the value for the 'analyzeduration' and 'probesize' options testwav1-chopped.wav: could not find codec parameters Guessed Channel Layout for Input Stream #0.0 : stereo Input #0, wav, from 'testwav1-chopped.wav': Duration: 00:00:10.45, bitrate: 1411 kb/s Stream #0:0: Audio: dts ([1][0][0][0] / 0x0001), 192000 Hz, 2 channels, fltp, 0 kb/s At least one output file must be specified