avformat/dtsdec: skip the first 4k in dts_probe()

DTS primarly needs to be separated from PCM, and PCM can contain cliping and
overshoots at the very start which can mimic DTS headers.

If this isnt sufficient then more of the DTS stream has to be decoded
and analyzed

Fixes ticket3784

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>